fixed any overflows

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,9 @@ body {
   background-color: black;
   color: white;
   font-family: 'Roboto Condensed', sans-serif;
+  margin: 0 auto;
+  overflow-x: hidden;
+
 }
 
 .nav-item {
@@ -25,13 +28,14 @@ body {
   width: 100%;
   background-color: black;
   border-top: 2px solid white;
-  font-size: 110%;
-  margin-top: 10px;
+  font-size: 155%;
+  margin-top: 100px;
+  text-align: center;
 }
 
 /* index.html */
 
-#hero-container {
+#hero {
   border-bottom: 2px;
   border-width: 2px;
   border-color: white;
@@ -195,7 +199,7 @@ padding-top: 10px;
   font-size: 18px;
   border: none;
   outline: none;
-  background-color: white;
+  background-color: gold;
   color: black;
   padding: 15px;
   border-radius: 4px;
@@ -237,5 +241,16 @@ padding-top: 10px;
     color: black;
     text-align: center;
     margin-bottom: 200px;
+  }
+
+  #footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: black;
+    border-top: 2px solid white;
+    font-size: 90%;
+    margin-top: 100px;
+    text-align: center;
   }
 }
